manage invitation requests

--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -6,6 +6,7 @@
   .col-sm-12
     = link_to 'Invite One User', new_admin_user_path, class: 'btn btn-primary'
     = link_to 'Import Multiple Users', new_admin_user_import_path, class: 'btn btn-primary'
+    = link_to 'Invitation Requests', admin_invitation_requests_path, class: 'btn btn-primary'
 
 .row.admin__search
   .col-sm-12
