--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,23 +1,24 @@
 .container
   .row
     .col-xs-10.col-xs-offset-1
-      %h2 Welcome.  
-      %p.lead This will eventually be the Wrapt landing page. 
-      %p For now, it is only viewable for people who have the general access information.
-      - if current_user
-        %p In MVP1a, when we invite people for testing, they will be taken to a special landing page.
-        %p
-          = link_to 'Tester Landing Page: Start a New Quiz', new_profile_path
-      - else
-        = simple_form_for @invitation_request do |form|
-          %h2 Launching Soon!
-          %p Enter Your Email Address below to be notified when you too can start giving better gifts based on her unique personality, passions, and purpose.
-
-          .form-inputs
-            = form.input :email
-        
-          .form-actions
-            = form.submit 'Submit', class: 'btn btn-primary'
+      .hero-overlay
+        %h2 Launching Soon!
+        %p Enter your Email Address below to be notified when you too can start giving better gifts based on her unique personality, passions, and purpose.
+      
+      .hero-overrun
+        - if current_user&.admin?
+          %p In MVP1a, when we invite people for testing, they will be taken to a special landing page.
+          %p
+            = link_to 'Tester Landing Page: Start a New Quiz', new_profile_path
+        - else
+          .sqr-progress
+          = simple_form_for @invitation_request, html: {class: 'sqr-form'} do |form|
+            .form-inputs
+              = form.input :email, label: 'What is your email address?', required: false
+          
+            .form-actions.pull-right
+              = form.submit 'Submit', class: 'btn btn-primary'
+            .clearfix
 
 
 
