show background on failed form submit

--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -1,7 +1,7 @@
 // Styles for Welcoming pages with the full-bleed hero images
 // e.g. Home Page and Quiz Landing page
 
-body.home .wrapper--full-bleed__bg-03{
+body.hero-bg .wrapper--full-bleed__bg-03{
   background-image: image-url('hero-image');
   background-size: 100vw;
   background-repeat: no-repeat;
