new quiz page gets hero

--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -33,3 +33,7 @@ body.hero-bg .wrapper--full-bleed__bg-03{
 .invitation_request_email input {
   border-color: $gray-005;
 }
+
+.hero-overrun .btn.btn-multiple-choice-option {
+  min-width: 148px;
+}
