--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,13 +1,17 @@
 .container
   .row
     .col-xs-10.col-xs-offset-1
+      .hero-overlay
+        %h2
+          She’s one-of-a-kind…
+          %br
+          now her gifts can be as well
+        %p We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, all year long.
 
-      %h1.text-center We use the science of gifting and gratitude to help you say, 'I get you.'
-      %p.lead.tan-002.ph2.text-center Wrapt is a fun and easy way to discover the perfect gifts she will love, based on who she actually is, all year long
-
-      %h3.text-center.mb2.mt3= @question_response.survey_question.prompt
-  .row
-    .col-xs-8.col-xs-offset-2
-      .landing-question
-        = simple_form_for @question_response, url: with_invitation_scope(profiles_path), html: {data: {behavior: 'question-response-form' }} do |form|
-          = render response_fields_partial, form: form, label: nil
+      .hero-overrun
+        .sqr-progress
+        = simple_form_for @question_response, url: with_invitation_scope(profiles_path), html: {data: {behavior: 'question-response-form'}, class: 'sqr-form'} do |form|
+          = render response_fields_partial, form: form, label: @question_response.survey_question.prompt
+          .sqr-submit__container.text-right#js-sqr-submit__container
+            %button{type: "submit", class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}}
+              Start Quiz
