--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -15,3 +15,20 @@
           .sqr-submit__container.text-right#js-sqr-submit__container
             %button{type: "submit", class: 'btn btn-primary sqr-submit__btn', data: {behavior: 'next-question-button'}}
               Start Quiz
+
+        .new-quiz__about-intro-wrapper
+          .new-quiz__about-intro-content
+            %h3 How Wrapt Works
+            %p Wrapt is a fun and easy way to discover the perfect gifts she will love, based on who she actually is, all year long.
+
+        .new-quiz__about-step.step-1.left
+          %h4 Tell us About Her
+          %p Answer a few questions about her personality, passions and purpose.
+
+        .new-quiz__about-step.step-2.right
+          %h4 We Suggests the Gifts She’ll Love
+          %p Based on your answers, we then match her with gifts from our curated collection.
+
+        .new-quiz__about-step.step-3.left
+          %h4 Wrapt & Delivered
+          %p She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
