--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -2,8 +2,8 @@
   .row
     .col-xs-10.col-xs-offset-1
       .hero-overlay
-        %h2 Launching Soon!
-        %p Enter your Email Address below to be notified when you too can start giving better gifts based on her unique personality, passions, and purpose.
+        %h2.light Launching Soon!
+        %p.light Enter your Email Address below to be notified when you too can start giving better gifts based on her unique personality, passions, and purpose.
       
       .hero-overrun
         - if current_user&.admin?
