--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -2,11 +2,11 @@
   .row
     .col-xs-10.col-xs-offset-1
       .hero-overlay
-        %h2
+        %h2.light
           She’s one-of-a-kind…
           %br
           now her gifts can be as well
-        %p We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, all year long.
+        %p.light We use the science of gifting and gratitude to match her personality, passions and purpose, to gifts she will love, all year long.
 
       .hero-overrun
         .sqr-progress
@@ -18,20 +18,20 @@
 
         .new-quiz__about-intro-wrapper
           .new-quiz__about-intro-content
-            %h3 How Wrapt Works
-            %p Wrapt is a fun and easy way to discover the perfect gifts she will love, based on who she actually is, all year long.
+            %h3.light How Wrapt Works
+            %p.light Wrapt is a fun and easy way to discover the perfect gifts she will love, based on who she actually is, all year long.
 
         .new-quiz__about-step.step-1.left
-          %h4 Tell us About Her
-          %p Answer a few questions about her personality, passions and purpose.
+          %h4.light Tell us About Her
+          %p.light Answer a few questions about her personality, passions and purpose.
 
         .new-quiz__about-step.step-2.right
-          %h4 We Suggests the Gifts She’ll Love
-          %p Based on your answers, we then match her with gifts from our curated collection.
+          %h4.light We Suggests the Gifts She’ll Love
+          %p.light Based on your answers, we then match her with gifts from our curated collection.
 
         .new-quiz__about-step.step-3.left
-          %h4 Wrapt & Delivered
-          %p She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
+          %h4.light Wrapt & Delivered
+          %p.light She receives a gift she loves, wrapt and delivered, and you will gain a 'gift whisperer' with all of her occasions.
 
 - content_for :after_wrapper do
   .new-quiz__after-wrapper.bg-blue-004
