--- a/app/assets/stylesheets/modules/_questions.scss
+++ b/app/assets/stylesheets/modules/_questions.scss
@@ -17,6 +17,9 @@
   border-bottom: 4px solid $blue-001;
   width: 120px;
 }
+.sqr-progress.sqr-progress--one-question-only {
+  width: 238px;
+}
 
 .sqr-previous__link {
   width: 40px;
