--- a/app/assets/stylesheets/modules/admin/_image_gallery_manager.scss
+++ b/app/assets/stylesheets/modules/admin/_image_gallery_manager.scss
@@ -4,11 +4,11 @@
 
 
 .admin__image-col {
-  height: 240px;
+  // height: 240px;
 }
 
 .admin__image-cell {
-  height: 240px;
+  // height: 240px;
   margin: 10px 0;
   text-align: center;
 
@@ -36,8 +36,8 @@
 .admin__image-cell-inner {
   display: inline-block;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  // top: 50%;
+  // transform: translateY(-50%);
 }
 
 .admin__add-gift-image-cell {
