basic layout for about pages

--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -42,7 +42,7 @@ $green-002: rgb(41, 180, 115); // #29B473
 
 $red-001: rgb(235, 103, 103); // #EB6767
 
-
+$tan-001: rgb(198, 177, 146); // #C6B192
 
 
 
