--- a/app/views/static_pages/privacy_policy.html.haml
+++ b/app/views/static_pages/privacy_policy.html.haml
@@ -1,2 +1,22 @@
-%h1 StaticPages#privacy_policy
-%p Find me in app/views/static_pages/privacy_policy.html.haml
+.container
+  .row
+    .col-xs-10.col-xs-offset-1
+      %h1.about-page__header Privacy Policy
+      %p.about-page__tagline Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis.
+
+      .row.about-page__subsection.with-image.image-left
+        = image_tag 'http://placehold.it/456x474'
+        .about-page__subsection-text
+          %h4 About Sub Section Header
+          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
+
+      .row.about-page__subsection.with-image.image-right
+        .about-page__subsection-text
+          %h4 About Sub Section Header
+          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
+        = image_tag 'http://placehold.it/456x474'
+
+      .row.about-page__subsection
+        .about-page__subsection-text
+          %h4 About Sub Section Header
+          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis. Nullam nibh dui, rutrum a lorem non, pulvinar cursus elit. Morbi imperdiet purus et ligula scelerisque, a convallis justo mollis.
