--- a/app/views/static_pages/science_of_gifting.html.haml
+++ b/app/views/static_pages/science_of_gifting.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-xs-10.col-xs-offset-1
-      %h1.about-page__header About Wrapt
+      %h1.about-page__header Science of Gifting
       %p.about-page__tagline Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at sem non mi tincidunt egestas nec quis arcu. Aenean mauris quam, maximus ac viverra ac, ultrices ut turpis.
 
       .row.about-page__subsection.with-image.image-left
