--- a/app/views/admin/profile_sets/index.html.haml
+++ b/app/views/admin/profile_sets/index.html.haml
@@ -14,6 +14,7 @@
 .row.admin__actions
   .col-sm-12
     = link_to 'New Response Set', new_admin_profile_set_path, class: 'btn btn-primary'
+    = link_to 'Export Public Quiz Responses', admin_public_survey_exports_path, class: 'btn btn-primary', method: :create
 
 .row
   .col-sm-12
