--- a/app/views/giftee_invitations/new.haml
+++ b/app/views/giftee_invitations/new.haml
@@ -5,7 +5,7 @@
 
   %p We will invite her to Wrapt, get her feedback on our recommendations and reveal the selection you made.
 
-  = simple_form_for @profile, url: profile_giftee_invitations_path(@profile) do |form|
+  = simple_form_for @profile, url: profile_giftee_invitations_path(@profile), data: {submits_to_pjax_modal: true}, method: :post do |form|
     = form.input :email, label: 'Email Address'
 
     = form.submit "Send Email", class: 'btn btn-primary btn-full-width'
