--- a/app/views/admin/gift_question_impacts/_edit_body_multiple_choice.haml
+++ b/app/views/admin/gift_question_impacts/_edit_body_multiple_choice.haml
@@ -14,15 +14,25 @@
     
     %h3 Response Impacts
     %table.table
-      = f.simple_fields_for :response_impacts do |response_impact_fields|
+      :ruby
+        response_impacts = @gift_question_impact.response_impacts.preload(:survey_question_option).sort{|a, b| a.survey_question_option.sort_order <=> b.survey_question_option.sort_order}
+        other_options = response_impacts.select{|_| _.survey_question_option.is_a?(SurveyQuestionOtherOption)}
+        # put the other options at the end
+        response_impacts -= other_options
+        response_impacts += other_options
+        response_impact_position = 1
+      = f.simple_fields_for :response_impacts, response_impacts do |response_impact_fields|
         %tr
-          %td= response_impact_fields.object.survey_question_option.text
+          %td
+            #{response_impact_position}:
+            = response_impact_fields.object.survey_question_option.text
           %td
             %span.slider-label.slider-label__min
               \-
             = response_impact_fields.input :impact, label: false, wrapper: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (response_impact_fields.object.impact), slider_selection: 'none' }}
             %span.slider-label.slider-label__max
               +
+        - response_impact_position += 1
 
   .form-actions
     = f.button :submit, "Save"
