--- a/app/views/admin/profile_sets/imports/_form.html.haml
+++ b/app/views/admin/profile_sets/imports/_form.html.haml
@@ -1,5 +1,5 @@
 = render 'imports/processing_import_modal'
-= simple_form_for  [:admin, @profile_set_import] do |f|
+= form_tag admin_profile_set_imports_path(@profile_set), method: :post, multipart: true do
   %p 
     Here you can upload an Excel spreadsheet containing responses to questions.
     For the format, see the description below the import button.
@@ -7,20 +7,19 @@
     Start with
     #{link_to 'this template', '/profile_sets/imports/Wrapt Response Set Import Template.xlsx'}.
 
-  - if @missing_resources_exception
+  .form-inputs
+    .form-group.required
+      %label.control-label.required Import File
+      = file_field_tag 'import_file'
+      
+  .form-actions= submit_tag 'Import', class: 'btn btn-primary'
+
+  - if @errors.present? && @errors.any?
     .alert.alert-danger.alert-dismissable
-      There was a problem with your upload. The following
-      #{@missing_resources_exception.resource_name.pluralize} could not be found:
-      #{@missing_resources_exception.values.join(', ')}
-
-      %button.close{'data-dismiss' => 'alert', type: :button}
-        %span ×
-  = f.error_notification
-
-  .form-inputs= f.input :records_file, as: :file
-  = render 'imports/row_errors', importable: @profile_set_import
-
-  .form-actions= f.submit 'Import', class: 'btn btn-primary'
+      %strong Problems found in the upload file.
+      - @errors.each do |message|
+        %p= message
+        
 
   %h3 Format
   %p Each row is a single response to a single question.
